<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="text_exportDB">Backup whole database to SD card so you will not lose any of your data. You can also move your data to another device.</string>
    <string name="dialog_export">Backup</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_exportTitle">Backup database</string>
    <string name="dialog_exportBody">WARNING: Any previous backups will be overwriten. The database backup will be created to the downloads folder: </string>
    <string name="dialog_importTitle">Restore database</string>
    <string name="dialog_importBody">WARNING: This will overwrite your current data. Attemp to restore database from downloads folder: </string>
    <string name="dialog_import">Restore</string>
    <string name="toast_successfull">Succes!</string>
    <string name="toast_notfound">Couldnt find database. Add the database backup to the Downloads folder.</string>
    <string name="toast_error">Error, try restarting app.</string>
    <string name="action_settings">Settings</string>
    <string name="add_meal_button">Add</string>
    <string name="add_sport_button">Add</string>
    <string name="addedtoDB">Added to database</string>
    <string name="addedtoDay">Added to day list</string>
    <string name="app_name">Food&amp;Sports Supervisor</string>
    <string name="change_date">Change</string>
    <string name="changed">Changed!</string>
    <string name="deletedfromDay">Removed</string>
    <string name="dialog_confirm_food">Delete foods?</string>
    <string name="dialog_confirm_sport">Delete sports?</string>
    <string name="dialog_deleteAll">Delete all</string>
    <string name="dialog_emptyList">The list is empty</string>
    <string name="error_wrongvalue">Wrong value</string>
    <string name="food_add">Add</string>
    <string name="food_addFood">..or add it to database first.</string>
    <string name="food_addToDBNameConflict">CANT: Food with this name is already in database.</string>
    <string name="food_addToDBWarning">CANT: Name, proteins, carbohydrates, fats and energy must be set correctly.</string>
    <string name="food_addToDayNoValue">CANT: Set weight or number of pieces.</string>
    <string name="food_addToDayNotSelected">CANT: First search and select food from database. You can also add it to database at bottom.</string>
    <string name="food_breakfest">Breakfest</string>
    <string name="food_carbs">Carbohydrates g/100g</string>
    <string name="food_carbsOnechar">C:</string>
    <string name="food_dinner">Dinner</string>
    <string name="food_energy">Energy kcal/100g</string>
    <string name="food_fat">Fats g/100g</string>
    <string name="food_fatsOnechar">F:</string>
    <string name="food_grams">Grams</string>
    <string name="food_gramsOnechar">g</string>
    <string name="food_hint">Weight / pieces</string>
    <string name="food_lunch">Lunch</string>
    <string name="food_name">Food name</string>
    <string name="food_piece">Grams per piece</string>
    <string name="food_pieceTwochar">pc</string>
    <string name="food_pieces">Pieces</string>
    <string name="food_proteins">Proteins g/100g</string>
    <string name="food_protsOnechar">P:</string>
    <string name="food_searchFood">Add food to daily list..</string>
    <string name="food_snack1">Snack I</string>
    <string name="food_snack2">Snack II</string>
    <string name="food_snack3">Snack III</string>
    <string name="food_type">Food type</string>
    <string name="kcal">kcal</string>
    <string name="list_meals">Food list:</string>
    <string name="list_sports">Sport list:</string>
    <string name="minutes">minutes</string>
    <string name="nameTooShort">CANT: Food name requires atleast 3 chars.</string>
    <string name="no">Cancel</string>
    <string name="notfound">Not foound</string>
    <string name="overview_carbs">Carbohydrates [g]</string>
    <string name="overview_changeRec">Change</string>
    <string name="overview_changeTxt">Change current recommended incomes</string>
    <string name="overview_deleteFoods">Delete</string>
    <string name="overview_deleteSports">Delete</string>
    <string name="overview_energy">Energetical incomes and outcomes</string>
    <string name="overview_energyIn">Income</string>
    <string name="overview_energyOut">Outcome</string>
    <string name="overview_energyTotal">Total [kcal]</string>
    <string name="overview_fats">Fats [g]</string>
    <string name="overview_intro">Here you can see your daily overview</string>
    <string name="overview_otherInfo">Other options</string>
    <string name="overview_prots">Proteins [g]</string>
    <string name="overview_recommendAgain">Set</string>
    <string name="overview_recommendTxt">Set new user settings and again recommend nutrition incomes</string>
    <string name="searchFood">Search food (eg: ham)</string>
    <string name="searchSport">Search sport (eg: hockey)</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="select_age">Age: </string>
    <string name="select_back">Back</string>
    <string name="select_continue">Continue</string>
    <string name="select_desire">I wish: </string>
    <string name="select_desireFatDown">Reduce weight</string>
    <string name="select_desireKeep">Maintant current figure</string>
    <string name="select_desireMuscles">Gain muscles</string>
    <string name="select_ectomorph">Im slim, its hard to gain weight for me, but I have no problem with overweight.</string>
    <string name="select_endomorph">Im heavy, its easy to gain weight for me, but I hardly lose some.</string>
    <string name="select_energykcal">Energy [kcal]</string>
    <string name="select_errorNoGeneticsSelected">Please choose ne option</string>
    <string name="select_errorNoInfoFiled">Please fill all the informations</string>
    <string name="select_fillThis">Please fill following informations</string>
    <string name="select_finish">Finish</string>
    <string name="select_gender">Gender: </string>
    <string name="select_genderFemale">Female</string>
    <string name="select_genderMale">Male</string>
    <string name="select_height">Height [cm]: </string>
    <string name="select_kcaloutput">Daily output [kcal]</string>
    <string name="select_mesomorph">Im normal or muscular figure, its fine to gain weight and easy to lose some.</string>
    <string name="select_noBackButton">Please fill following informations, it will take just a little while</string>
    <string name="select_recommended">We have recommended you nutrion incomes and energetical output. You can see it all on overview page.</string>
    <string name="select_recommendedselect">Here you can change your recommended incomes due to your needs</string>
    <string name="select_save">Save</string>
    <string name="select_tellUsMore">Tell us more about yourself..</string>
    <string name="select_weight">Weight [kg]: </string>
    <string name="select_weightRec">Weight [kg]</string>
    <string name="selected">Selected</string>
    <string name="sport_addSport">..or add it to database first.</string>
    <string name="sport_addToDBNameConflict">CANTT: Sport with this name already in database.</string>
    <string name="sport_addToDayNoTime">CANTT: Sport time must be set.</string>
    <string name="sport_addToDayNotSelected">CANTT: First search and select food from database. You can also add it to database at bottom.</string>
    <string name="sport_determineDifficult">Select difficult from 1 to 10</string>
    <string name="sport_dif1">1 .. slow walk</string>
    <string name="sport_dif10">10 .. maraton</string>
    <string name="sport_dif5">5 .. fotball match</string>
    <string name="sport_food_added">Added: </string>
    <string name="sport_food_added_def">Added: -- nothing added --</string>
    <string name="sport_food_total">Total: </string>
    <string name="sport_food_total_def">Celkem: -- nothing --</string>
    <string name="sport_hint">Set time</string>
    <string name="sport_minutes">minutes</string>
    <string name="sport_name">Sport name</string>
    <string name="sport_searchSport">Add sport to daily list..</string>
    <string name="sport_wrongDiff">CANT: Difficult must be a number from 1 to 10.</string>
    <string name="title_activity_addfood">Add food</string>
    <string name="title_activity_addsport">Add sport</string>
    <string name="title_activity_meal">Food</string>
    <string name="title_activity_overview">Overview</string>
    <string name="title_activity_select">Settings</string>
    <string name="title_activity_selectRec">Chenge settings</string>
    <string name="title_activity_sport">Sports</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="total_input">Total input</string>
    <string name="total_output">Total output</string>
    <string name="warning_carbs">WARNING! Too much carbs, reduce food containing much carbohydrates.</string>
    <string name="warning_carbsLow">WARNING! Not enough carbohydrate. Add some carbohydrates, like: rice, potatoes, porridge, fruits, grains..</string>
    <string name="warning_energy">WARNING! Too high total energetical income. Add more sports or eat less.</string>
    <string name="warning_energyLow">WARNING! Too low total energetical income. Eat more food.</string>
    <string name="warning_fats">WARNING! Too much fats, reduce food containing much fats.</string>
    <string name="warning_fatsLow">WARNING! Not enough fats. Add some fats, like: fishes, nuts..</string>
    <string name="warning_prots">WARNING! Too much proteins, reduce food containing much proteins.</string>
    <string name="warning_protsLow">WARNING! Not enough proteins. Add some proteins, like: meat, dairy products, eggs, soya..</string>
    <string name="yes">Delete</string>
</resources>