<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cz.cvut.fit.damsupervisor.AddSportActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/layoutFindSportInDB"
        android:background="@color/colorLightBlue">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sport_searchSport"
        android:id="@+id/textViewFindSportInDB"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        />
    </LinearLayout>

    <SearchView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/searchViewSport"
        android:layout_below="@+id/layoutFindSportInDB"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/sport_hint"
        android:ems="10"
        android:id="@+id/editTextTime"
        android:layout_below="@+id/searchViewSport"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewTime"
        android:text="@string/sport_minutes"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/searchViewSport"
        android:layout_toRightOf="@id/editTextTime"
        android:paddingTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <RelativeLayout
        android:id="@+id/layoutAddSportDay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textViewAddedSportsTotal"
        android:background="@color/colorLightWhite"
        android:layout_marginTop="5dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_add"
            android:id="@+id/buttonAddSportBySearch"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="onClickAddSportToDay"
            android:textColor="@color/colorFlatButton"
            android:textStyle="bold"
            style="?attr/borderlessButtonStyle"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:id="@+id/buttonUndoSport"
            android:layout_alignParentLeft="true"
            android:onClick="onClickDelSport"
            android:textColor="@color/colorFlatButton"
            android:textStyle="bold"
            style="?attr/borderlessButtonStyle"/>
    </RelativeLayout>

    <TextView
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewAddedSport"
        android:text="@string/sport_food_added_def"
        android:layout_below="@+id/editTextTime"
        android:layout_alignParentLeft="true"
        android:textColor="@color/colorRed"
        android:paddingLeft="10dp"/>

    <TextView
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewAddedSportsTotal"
        android:text="@string/sport_food_total_def"
        android:textColor="@color/colorRed"
        android:layout_below="@+id/textViewAddedSport"
        android:layout_alignParentLeft="true"
        android:paddingLeft="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutAddSportDay"
        android:id="@+id/layoutAddSportToDB"
        android:background="@color/colorLightBlue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sport_addSport"
        android:id="@+id/textViewAddSportToDB"
        android:layout_below="@+id/buttonAddSportBySearch"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sport_name"
        android:id="@+id/textViewSportName"
        android:layout_below="@+id/layoutAddSportToDB"
        android:paddingLeft="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/editTextSportname"
        android:layout_below="@+id/textViewSportName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sport_determineDifficult"
        android:id="@+id/textViewSportDiffInfo"
        android:layout_below="@+id/editTextSportname"
        android:paddingLeft="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextSportdif"
        android:layout_below="@+id/textViewSportDiffInfo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sport_dif1"
        android:id="@+id/textViewSportDiff1"
        android:layout_below="@+id/editTextSportdif"
        android:paddingLeft="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sport_dif5"
        android:id="@+id/textViewSportDiff5"
        android:layout_below="@+id/textViewSportDiff1"
        android:paddingLeft="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sport_dif10"
        android:id="@+id/textViewSportDiff10"
        android:layout_below="@+id/textViewSportDiff5"
        android:paddingLeft="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <RelativeLayout
        android:id="@+id/layoutAddSportDB"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textViewSportDiff10"
        android:background="@color/colorLightWhite"
        android:layout_marginTop="5dp">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_add"
        android:id="@+id/buttonAddSportToDB"
        android:textColor="@color/colorFlatButton"
        android:textStyle="bold"
        style="?attr/borderlessButtonStyle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onClickAddSportToDB"/>
    </RelativeLayout>

</RelativeLayout>
</ScrollView>