<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cz.cvut.fit.damsupervisor.SelectInfoActivity">
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="55dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/select_tellUsMore"
        android:id="@+id/textViewSelectTellUsMore"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="10dp"
        android:paddingLeft="10dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/textViewSelectTellUsMore"
        android:id="@+id/radioGroupDesire">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/select_endomorph"
        android:id="@+id/radioButtonEndomorph"
        android:checked="false"
        android:paddingTop="20dp"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/select_mesomorph"
        android:id="@+id/radioButtonMesomorph"
        android:checked="false"
        android:paddingTop="20dp"        />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/select_ectomorph"
        android:id="@+id/radioButtonEctomorph"
        android:checked="false"
        android:paddingTop="20dp"/>
    </RadioGroup>


        </RelativeLayout>
    </ScrollView>

    <RelativeLayout android:id="@+id/footer" android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true" style="@android:style/ButtonBar"
        android:background="@color/colorLightWhite">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_finish"
            android:id="@+id/button2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="onClickFinish"
            android:textColor="@color/colorFlatButton"
            android:textStyle="bold"
            style="?attr/borderlessButtonStyle"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_back"
            android:id="@+id/buttonSelectBack"
            android:onClick="onClickBack"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/colorFlatButton"
            android:textStyle="bold"
            style="?attr/borderlessButtonStyle"/>
    </RelativeLayout>

</RelativeLayout>
